--- a/notebooks/res_asso.ipynb
+++ b/notebooks/res_asso.ipynb
@@ -167,7 +167,7 @@
     "df_res_mean,df_res_std = compute_runs_over_dimensions(dimensions=[5,10,20,30,50,100,150,200], #150,200\n",
     "                             strategies=['None','SmoteNC (K=5)','MGS-NC(mu)(5)(EmpCov)',\n",
     "                                         'MGS(mu)(d+1)(EmpCov) 1-NN','MGS(mu)(d+1)(EmpCov) 5-NN','MGS(mu)(d+1)(EmpCov) DRFsk classique (mtry=None)',],\n",
-    "                             init_output_dir_path=\"../saved_experiments_categorial_features/2025-sim1/2025-02-28/no-scale/lgbm/K=d+1/5kSamples/ll1/startified/1fold/s4/normal/dimension_\",\n",
+    "                             init_output_dir_path=\"../saved_experiments_categorial_features/sim_asso/2025/normal/dimension_\",\n",
     "                             init_name_file='2024-10-01-synthetic_', n_fold=1,n_iter=20)"
    ]
   },
@@ -305,7 +305,7 @@
    "source": [
     "list_asso_final_mean_1nn, list_asso_final_std_1nn,list_acc_bayes_1nn,list_acc_bayes_1nn_std, list_bayes_diff_mean_1nn, list_bayes_diff_std_1nn = compute_asso_over_dimensions(\n",
     "    dimensions = [5,10,20,30,50,100,150,200],\n",
-    "    init_output_dir_path=\"../saved_experiments_categorial_features/2025-sim1/2025-02-28/no-scale/lgbm/K=d+1/5kSamples/ll1/startified/1fold/s4/normal/dimension_\",\n",
+    "    init_output_dir_path=\"../saved_experiments_categorial_features/sim_asso/2025/normal/dimension_\",\n",
     "    init_name_file='2024-10-01-synthetic_',\n",
     "    clf = KNeighborsClassifier(n_neighbors=1),n_iter=20,\n",
     ")\n",
@@ -323,7 +323,7 @@
    "source": [
     "list_asso_final_mean_5nn, list_asso_final_std_5nn,list_acc_bayes_5nn,list_acc_bayes_5nn_std, list_bayes_diff_mean_5nn, list_bayes_diff_std_5nn = compute_asso_over_dimensions(\n",
     "    dimensions = [5,10,20,30,50,100,150,200],\n",
-    "    init_output_dir_path=\"../saved_experiments_categorial_features/2025-sim1/2025-02-28/no-scale/lgbm/K=d+1/5kSamples/ll1/startified/1fold/s4/normal/dimension_\",\n",
+    "    init_output_dir_path=\"../saved_experiments_categorial_features/sim_asso/2025/normal/dimension_\",\n",
     "    init_name_file='2024-10-01-synthetic_',\n",
     "    clf = KNeighborsClassifier(n_neighbors=5)\n",
     ")"
@@ -338,7 +338,7 @@
    "source": [
     "list_asso_final_mean_grf, list_asso_final_std_grf, list_acc_bayes_grf,list_acc_bayes_grf_std, list_bayes_diff_mean_grf, list_bayes_diff_std_grf = compute_asso_over_dimensions(\n",
     "    dimensions = [5,10,20,30,50,100,150,200], #\n",
-    "    init_output_dir_path=\"../saved_experiments_categorial_features/2025-sim1/2025-02-28/no-scale/lgbm/K=d+1/5kSamples/ll1/startified/1fold/s4/normal/dimension_\",\n",
+    "    init_output_dir_path=\"../saved_experiments_categorial_features/sim_asso/2025/normal/dimension_\",\n",
     "    init_name_file='2024-10-01-synthetic_',\n",
     "    clf = DrfSk(random_state=1,max_features=None,n_jobs=12),n_iter=20,\n",
     ")"
@@ -385,7 +385,7 @@
     "#plt.legend(fontsize=fontsize)\n",
     "plt.legend(bbox_to_anchor =(0.5,-0.38),ncol=3, loc='lower center',fontsize=40)\n",
     "if True:\n",
-    "    plt.savefig('2025-images/sim1-corps-acc-final.pdf',bbox_inches='tight')\n",
+    "    plt.savefig('sim1-corps-acc-final.pdf',bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
