Update MGS-GRF importation

--- a/protocols/notebooks/res_asso.ipynb
+++ b/protocols/notebooks/res_asso.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.insert(1, os.path.abspath(os.path.join(os.getcwd(), os.pardir)))\n",
+    "sys.path.insert(1, os.path.dirname(os.path.abspath(os.path.join(os.getcwd(), os.pardir))))\n",
     "from pathlib import Path\n",
     "from collections import Counter\n",
     "\n",
