--- a/example/example.ipynb
+++ b/example/example.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1  style=\"color:white; background-color:#808b96; border-radius: 10px; padding:15px;\"> Banchurners data </h1></center>"
+    "<center><h1  style=\"color:white; background-color:#808b96; border-radius: 10px; padding:15px;\"> BankChurners data </h1></center>"
    ]
   },
   {
