Update import of MGS-GRF

--- a/example/example.ipynb
+++ b/example/example.ipynb
@@ -42,8 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mgs_grf.over_sampling import MGSGRFOverSampler\n",
-    "from mgs_grf.forest_for_categorical import DrfSk"
+    "from mgs_grf import MGSGRFOverSampler\n",
+    "from mgs_grf import DrfSk"
    ]
   },
   {
