Update example notebook

--- a/example/example.ipynb
+++ b/example/example.ipynb
@@ -32,7 +32,7 @@
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "from validation.classif_experiments import read_subsampling_indices, subsample_to_ratio_indices\n",
-    "from data.data import load_BankChurners_data\n",
+    "from data.data import load_BankChurners_data_\n",
     "import lightgbm as lgb"
    ]
   },
@@ -42,8 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mgs_grf import MGSGRFOverSampler\n",
-    "from mgs_grf import DrfSk"
+    "output_dir_path = \"../saved_experiments_categorial_features/BankChurners_example\"\n",
+    "Path(output_dir_path).mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -59,8 +59,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_dir_path = \"../saved_experiments_categorial_features/BankChurners_example\"\n",
-    "Path(output_dir_path).mkdir(parents=True, exist_ok=True)"
+    "## Import of the original data\n",
+    "X,y = load_BankChurners_data_()\n",
+    "numeric_features = [0,2,7,8,9,10,11,12,13,14,15,16,17,18]\n",
+    "categorical_features = [1,3,4,5,6]\n",
+    "print(\"Bankchurners 1% imbalance ratio : \", Counter(y))"
    ]
   },
   {
@@ -69,17 +72,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Import of the original data\n",
-    "initial_X,initial_y = load_BankChurners_data()\n",
-    "numeric_features = [0,2,7,8,9,10,11,12,13,14,15,16,17,18]\n",
-    "categorical_features = [1,3,4,5,6]\n",
-    "\n",
-    "## Decreasing the imbalance ratio from 20% to 1%.\n",
-    "indices_kept_1 = subsample_to_ratio_indices(X=initial_X,y=initial_y,ratio=0.01,seed_sub=5,output_dir_subsampling=output_dir_path,\n",
-    "                                            name_subsampling_file='BankChurners_sub_original_to_1')\n",
-    "X, y = initial_X[indices_kept_1],initial_y[indices_kept_1]\n",
-    "print(\"Bankchurners 1% imbalance ratio : \", Counter(y))\n",
-    "\n",
     "## Splitting the data intro train and test set\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
    ]
@@ -90,23 +82,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from mgs_grf import MGSGRFOverSampler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Apply MGS-GRF procedure to oversample the data\n",
-    "mgs_grf = MGSGRFOverSampler(K=len(numeric_features),categorical_features=categorical_features, Classifier=DrfSk(),random_state=0)\n",
+    "mgs_grf = MGSGRFOverSampler(K=len(numeric_features),categorical_features=categorical_features,random_state=0)\n",
     "balanced_X, balanced_y = mgs_grf.fit_resample(X_train,y_train)\n",
-    "print(\"Augmented data : \", Counter(balanced_y))\n",
-    "\n",
+    "print(\"Augmented data : \", Counter(balanced_y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Encode the categorical variables\n",
     "enc = OneHotEncoder(handle_unknown='ignore',sparse_output=False)\n",
     "balanced_X_encoded = enc.fit_transform(balanced_X[:,categorical_features])\n",
     "balanced_X_final = np.hstack((balanced_X[:,numeric_features],balanced_X_encoded))\n",
-    "clf_mgs = lgb.LGBMClassifier(n_estimators=100,verbosity=-1, random_state=0)\n",
+    "\n",
     "# Fit the final classifier on the augmented data\n",
-    "clf_mgs.fit(balanced_X_final, balanced_y)\n",
+    "clf = lgb.LGBMClassifier(n_estimators=100,verbosity=-1, random_state=0)\n",
+    "clf.fit(balanced_X_final, balanced_y)\n",
     "\n",
     "## Evaluation on test set\n",
     "X_test_enc = enc.transform(X_test[:,categorical_features])\n",
     "X_test_final = np.hstack((X_test[:,numeric_features],X_test_enc))\n",
-    "y_pred_probas_mgs_grf = clf_mgs.predict_proba(X_test_final)[:,1]\n",
+    "y_pred_probas_mgs_grf = clf.predict_proba(X_test_final)[:,1]\n",
     "print(\"PR AUC induced by MGS-GRF : \", average_precision_score(y_test, y_pred_probas_mgs_grf))"
    ]
   },
