--- a/example/example.ipynb
+++ b/example/example.ipynb
@@ -135,7 +135,7 @@
     "X_test_enc = enc.transform(X_test[:,categorical_features])\n",
     "X_test_final = np.hstack((X_test[:,numeric_features],X_test_enc))\n",
     "y_pred_probas_none = clf_none.predict_proba(X_test_final)[:,1]\n",
-    "print(\"PR AUC induced by applying no rebalncing strategy : \", average_precision_score(y_test, y_pred_probas_none))"
+    "print(\"PR AUC induced by applying no rebalancing strategy : \", average_precision_score(y_test, y_pred_probas_none))"
    ]
   },
   {
