FIX: Remove mkdir

--- a/example/example.ipynb
+++ b/example/example.ipynb
@@ -37,20 +37,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "output_dir_path = \"../saved_experiments_categorial_features/BankChurners_example\"\n",
-    "Path(output_dir_path).mkdir(parents=True, exist_ok=True)"
+    "<center><h1  style=\"color:white; background-color:#808b96; border-radius: 10px; padding:15px;\"> BankChurners data </h1></center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1  style=\"color:white; background-color:#808b96; border-radius: 10px; padding:15px;\"> BankChurners data </h1></center>"
+    "## Import data and split\n"
    ]
   },
   {
@@ -74,6 +71,13 @@
    "source": [
     "## Splitting the data intro train and test set\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apply MGS-GRF and compare to applying no rebalacing strategies"
    ]
   },
   {
