REFAC: changed names for example

--- a/example/example.ipynb
+++ b/example/example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1  style=\"color:white; background-color:#000000; border-radius: 0px; padding:25px;\"> MGS-GRF </h1></center>"
+    "<center><h1  style=\"color:white; background-color:#000000; border-radius: 0px; padding:25px;\"> Oversampling mixed data-set with MGS-GRF </h1></center>"
    ]
   },
   {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,22 @@
     "import sys\n",
     "sys.path.insert(1, os.path.abspath(os.path.join(os.getcwd(), os.pardir)))\n",
     "from pathlib import Path\n",
-    "from collections import Counter\n",
-    "\n",
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lightgbm as lgb\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import average_precision_score\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
-    "from validation.classif_experiments import read_subsampling_indices, subsample_to_ratio_indices\n",
-    "from data.data import load_BankChurners_data_\n",
-    "import lightgbm as lgb"
+    "from mgs_grf import MGSGRFOverSampler"
    ]
   },
   {
@@ -52,25 +58,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bankchurners 1% imbalance ratio :  Counter({np.int64(0): 8500, np.int64(1): 85})\n"
+     ]
+    }
+   ],
    "source": [
     "## Import of the original data\n",
-    "X,y = load_BankChurners_data_()\n",
+    "from experiments.data.data import load_BankChurners_data_\n",
+    "\n",
+    "X, y = load_BankChurners_data_()\n",
     "numeric_features = [0,2,7,8,9,10,11,12,13,14,15,16,17,18]\n",
-    "categorical_features = [1,3,4,5,6]\n",
-    "print(\"Bankchurners 1% imbalance ratio : \", Counter(y))"
+    "categorical_features = [1,3,4,5,6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bankchurners 1% imbalance ratio :  Counter({np.int64(0): 6802, np.int64(1): 66})\n"
+     ]
+    }
+   ],
    "source": [
     "## Splitting the data intro train and test set\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+    "X_train_imbalanced, X_test, y_train_imbalanced, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
+    "print(\"Bankchurners 1% imbalance ratio : \", Counter(y_train_imbalanced))"
    ]
   },
   {
@@ -82,64 +106,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mgs_grf import MGSGRFOverSampler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Augmented data :  Counter({np.int64(0): 6802, np.int64(1): 6802})\n"
+     ]
+    }
+   ],
    "source": [
     "## Apply MGS-GRF procedure to oversample the data\n",
-    "mgs_grf = MGSGRFOverSampler(K=len(numeric_features),categorical_features=categorical_features,random_state=0)\n",
-    "balanced_X, balanced_y = mgs_grf.fit_resample(X_train,y_train)\n",
-    "print(\"Augmented data : \", Counter(balanced_y))"
+    "mgs_grf = MGSGRFOverSampler(K=len(numeric_features), categorical_features=categorical_features, random_state=0)\n",
+    "X_train_balanced, y_train_balanced = mgs_grf.fit_resample(X_train_imbalanced, y_train_imbalanced)\n",
+    "print(\"Augmented data : \", Counter(y_train_balanced))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PR AUC induced by MGS-GRF :  0.5707786587586248\n"
+     ]
+    }
+   ],
    "source": [
     "## Encode the categorical variables\n",
-    "enc = OneHotEncoder(handle_unknown='ignore',sparse_output=False)\n",
-    "balanced_X_encoded = enc.fit_transform(balanced_X[:,categorical_features])\n",
-    "balanced_X_final = np.hstack((balanced_X[:,numeric_features],balanced_X_encoded))\n",
+    "enc = OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False)\n",
+    "X_train_balanced_enc = np.hstack((X_train_balanced[:,numeric_features],\n",
+    "                                  enc.fit_transform(X_train_balanced[:,categorical_features])))\n",
+    "X_test_enc = np.hstack((X_test[:,numeric_features], enc.transform(X_test[:,categorical_features])))\n",
     "\n",
     "# Fit the final classifier on the augmented data\n",
-    "clf = lgb.LGBMClassifier(n_estimators=100,verbosity=-1, random_state=0)\n",
-    "clf.fit(balanced_X_final, balanced_y)\n",
+    "clf = lgb.LGBMClassifier(n_estimators=100, verbosity=-1, random_state=0)\n",
+    "clf.fit(X_train_balanced_enc, y_train_balanced)\n",
     "\n",
     "## Evaluation on test set\n",
-    "X_test_enc = enc.transform(X_test[:,categorical_features])\n",
-    "X_test_final = np.hstack((X_test[:,numeric_features],X_test_enc))\n",
-    "y_pred_probas_mgs_grf = clf.predict_proba(X_test_final)[:,1]\n",
+    "y_pred_probas_mgs_grf = clf.predict_proba(X_test_enc)[:,1]\n",
     "print(\"PR AUC induced by MGS-GRF : \", average_precision_score(y_test, y_pred_probas_mgs_grf))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PR AUC induced by applying no rebalancing strategy :  0.401426481385112\n"
+     ]
+    }
+   ],
    "source": [
     "## Comparison when applying no rebalancing strategy\n",
-    "enc = OneHotEncoder(handle_unknown='ignore',sparse_output=False)\n",
-    "X_train_encoded = enc.fit_transform(X_train[:,categorical_features])\n",
-    "X_train_final = np.hstack((X_train[:,numeric_features],X_train_encoded))\n",
-    "clf_none = lgb.LGBMClassifier(n_estimators=100,verbosity=-1, random_state=0)\n",
-    "clf_none.fit(X_train_final, y_train)\n",
+    "X_train_imbalanced_enc = np.hstack((X_train_imbalanced[:,numeric_features],\n",
+    "                                    enc.fit_transform(X_train_imbalanced[:,categorical_features])))\n",
+    "clf_imbalanced = lgb.LGBMClassifier(n_estimators=100, verbosity=-1, random_state=0)\n",
+    "clf_imbalanced.fit(X_train_imbalanced_enc, y_train_imbalanced)\n",
     "\n",
-    "X_test_enc = enc.transform(X_test[:,categorical_features])\n",
-    "X_test_final = np.hstack((X_test[:,numeric_features],X_test_enc))\n",
-    "y_pred_probas_none = clf_none.predict_proba(X_test_final)[:,1]\n",
-    "print(\"PR AUC induced by applying no rebalancing strategy : \", average_precision_score(y_test, y_pred_probas_none))"
+    "y_pred_probas_imbalanced = clf_imbalanced.predict_proba(X_test_enc)[:,1]\n",
+    "print(\"PR AUC induced by applying no rebalancing strategy : \", average_precision_score(y_test, y_pred_probas_imbalanced))"
    ]
   },
   {
@@ -166,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
