--- a/example/example_continous_only.ipynb
+++ b/example/example_continous_only.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,6 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import average_precision_score\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "from mgs_grf import MGSGRFOverSampler"
    ]
@@ -58,39 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bankchurners 1% imbalance ratio :  Counter({np.int64(0): 8500, np.int64(1): 85})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Import of the original data\n",
     "from experiments.data.data import load_BankChurners_data_\n",
     "\n",
     "X, y = load_BankChurners_data_()\n",
     "numeric_features = [0,2,7,8,9,10,11,12,13,14,15,16,17,18]\n",
-    "categorical_features = [1,3,4,5,6]"
+    "X = X[:,numeric_features]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bankchurners 1% imbalance ratio :  Counter({np.int64(0): 6802, np.int64(1): 66})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Splitting the data intro train and test set\n",
     "X_train_imbalanced, X_test, y_train_imbalanced, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
@@ -106,37 +89,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Augmented data :  Counter({np.int64(0): 6802, np.int64(1): 6802})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Apply MGS-GRF procedure to oversample the data\n",
-    "mgs_grf = MGSGRFOverSampler(K=len(numeric_features), categorical_features=categorical_features, random_state=0)\n",
+    "mgs_grf = MGSGRFOverSampler(K=len(numeric_features), random_state=0)\n",
     "X_train_balanced, y_train_balanced = mgs_grf.fit_resample(X_train_imbalanced, y_train_imbalanced)\n",
     "print(\"Augmented data : \", Counter(y_train_balanced))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PR AUC induced by MGS-GRF :  0.5707786587586248\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Encode the categorical variables\n",
     "enc = OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False)\n",
@@ -155,17 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PR AUC induced by applying no rebalancing strategy :  0.401426481385112\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Comparison when applying no rebalancing strategy\n",
     "X_train_imbalanced_enc = np.hstack((X_train_imbalanced[:,numeric_features],\n",
