ADD: simple example

--- a/example/example_continous_only.ipynb
+++ b/example/example_continous_only.ipynb
@@ -105,18 +105,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Encode the categorical variables\n",
-    "enc = OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False)\n",
-    "X_train_balanced_enc = np.hstack((X_train_balanced[:,numeric_features],\n",
-    "                                  enc.fit_transform(X_train_balanced[:,categorical_features])))\n",
-    "X_test_enc = np.hstack((X_test[:,numeric_features], enc.transform(X_test[:,categorical_features])))\n",
-    "\n",
     "# Fit the final classifier on the augmented data\n",
     "clf = lgb.LGBMClassifier(n_estimators=100, verbosity=-1, random_state=0)\n",
-    "clf.fit(X_train_balanced_enc, y_train_balanced)\n",
+    "clf.fit(X_train_balanced, y_train_balanced)\n",
     "\n",
     "## Evaluation on test set\n",
-    "y_pred_probas_mgs_grf = clf.predict_proba(X_test_enc)[:,1]\n",
+    "y_pred_probas_mgs_grf = clf.predict_proba(X_test)[:,1]\n",
     "print(\"PR AUC induced by MGS-GRF : \", average_precision_score(y_test, y_pred_probas_mgs_grf))"
    ]
   },
@@ -127,12 +121,10 @@
    "outputs": [],
    "source": [
     "## Comparison when applying no rebalancing strategy\n",
-    "X_train_imbalanced_enc = np.hstack((X_train_imbalanced[:,numeric_features],\n",
-    "                                    enc.fit_transform(X_train_imbalanced[:,categorical_features])))\n",
     "clf_imbalanced = lgb.LGBMClassifier(n_estimators=100, verbosity=-1, random_state=0)\n",
-    "clf_imbalanced.fit(X_train_imbalanced_enc, y_train_imbalanced)\n",
+    "clf_imbalanced.fit(X_train_imbalanced, y_train_imbalanced)\n",
     "\n",
-    "y_pred_probas_imbalanced = clf_imbalanced.predict_proba(X_test_enc)[:,1]\n",
+    "y_pred_probas_imbalanced = clf_imbalanced.predict_proba(X_test)[:,1]\n",
     "print(\"PR AUC induced by applying no rebalancing strategy : \", average_precision_score(y_test, y_pred_probas_imbalanced))"
    ]
   },
