Update importation paths

--- a/experiments/protocols/notebooks/res_asso.ipynb
+++ b/experiments/protocols/notebooks/res_asso.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.insert(1, os.path.dirname(os.path.abspath(os.path.join(os.getcwd(), os.pardir))))\n",
+    "sys.path.insert(1, os.path.abspath(Path(__file__).parents[3]))\n",
     "from pathlib import Path\n",
     "from collections import Counter\n",
     "\n",
@@ -33,7 +33,7 @@
     "import pandas as pd\n",
     "from sklearn.metrics import precision_score, recall_score, roc_auc_score,balanced_accuracy_score,average_precision_score\n",
     "\n",
-    "from validation.classif_experiments import (compute_metrics_several_protocols,\n",
+    "from experiments.validation.classif_experiments import (compute_metrics_several_protocols,\n",
     "                                            prec_at_recall_version3, prec_at_recall_version3_02)"
    ]
   },
