--- a/example/example_continous_only.ipynb
+++ b/example/example_continous_only.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,13 +71,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bankchurners 1% imbalance ratio :  Counter({0: 6802, 1: 66})\n"
+     ]
+    }
+   ],
    "source": [
     "## Splitting the data intro train and test set\n",
     "X_train_imbalanced, X_test, y_train_imbalanced, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
     "print(\"Bankchurners 1% imbalance ratio : \", Counter(y_train_imbalanced))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[59, 1, 51, ..., 103, 0.717, 0.071],\n",
+       "       [48, 2, 27, ..., 80, 0.86, 0.339],\n",
+       "       [57, 1, 41, ..., 75, 0.562, 0.696],\n",
+       "       ...,\n",
+       "       [44, 4, 34, ..., 68, 0.619, 0.632],\n",
+       "       [50, 3, 38, ..., 41, 0.64, 0.187],\n",
+       "       [59, 1, 53, ..., 33, 0.32, 0.346]], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_imbalanced"
    ]
   },
   {
@@ -89,9 +123,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Augmented data :  Counter({0: 6802, 1: 6802})\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abdoulaye_sakho/S2/mgs-grf/mgs_grf/over_sampling.py:372: UserWarning: MGSGRFOverSampler called with continuous features only.\n",
+      "  warnings.warn('MGSGRFOverSampler called with continuous features only.')\n"
+     ]
+    }
+   ],
    "source": [
     "## Apply MGS-GRF procedure to oversample the data\n",
     "mgs_grf = MGSGRFOverSampler(K=len(numeric_features), random_state=0)\n",
@@ -101,9 +151,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PR AUC induced by MGS-GRF :  0.5993393573877037\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abdoulaye_sakho/miniconda3/envs/dev_env/lib/python3.11/site-packages/sklearn/utils/deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "  warnings.warn(\n",
+      "/home/abdoulaye_sakho/miniconda3/envs/dev_env/lib/python3.11/site-packages/sklearn/utils/deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit the final classifier on the augmented data\n",
     "clf = lgb.LGBMClassifier(n_estimators=100, verbosity=-1, random_state=0)\n",
@@ -116,9 +184,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abdoulaye_sakho/miniconda3/envs/dev_env/lib/python3.11/site-packages/sklearn/utils/deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PR AUC induced by applying no rebalancing strategy :  0.44497912661955746\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abdoulaye_sakho/miniconda3/envs/dev_env/lib/python3.11/site-packages/sklearn/utils/deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "## Comparison when applying no rebalancing strategy\n",
     "clf_imbalanced = lgb.LGBMClassifier(n_estimators=100, verbosity=-1, random_state=0)\n",
@@ -134,6 +226,11 @@
    "source": [
     "<center><h1  style=\"color:white; background-color:#808b96; border-radius: 10px; padding:15px;\"> END </h1></center>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -152,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
