--- a/example/example.ipynb
+++ b/example/example.ipynb
@@ -60,15 +60,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bankchurners 1% imbalance ratio :  Counter({np.int64(0): 8500, np.int64(1): 85})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Import of the original data\n",
     "from experiments.data.data import load_BankChurners_data_\n",
@@ -80,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bankchurners 1% imbalance ratio :  Counter({np.int64(0): 6802, np.int64(1): 66})\n"
+      "Bankchurners 1% imbalance ratio :  Counter({0: 6802, 1: 66})\n"
      ]
     }
    ],
@@ -106,20 +98,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abdoulaye_sakho/S2/mgs-grf/mgs_grf/over_sampling.py:385: UserWarning: MGSGRFOverSampler called with K=None. We set K to the number of continuous features: K=14\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Augmented data :  Counter({np.int64(0): 6802, np.int64(1): 6802})\n"
+      "Augmented data :  Counter({0: 6802, 1: 6802})\n"
      ]
     }
    ],
    "source": [
     "## Apply MGS-GRF procedure to oversample the data\n",
-    "mgs_grf = MGSGRFOverSampler(K=len(numeric_features), categorical_features=categorical_features, random_state=0)\n",
+    "mgs_grf = MGSGRFOverSampler(categorical_features=categorical_features, random_state=0)\n",
     "X_train_balanced, y_train_balanced = mgs_grf.fit_resample(X_train_imbalanced, y_train_imbalanced)\n",
     "print(\"Augmented data : \", Counter(y_train_balanced))"
    ]
@@ -133,7 +133,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PR AUC induced by MGS-GRF :  0.5707786587586248\n"
+      "PR AUC induced by MGS-GRF :  0.5767656364976163\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abdoulaye_sakho/miniconda3/envs/dev_env/lib/python3.11/site-packages/sklearn/utils/deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "  warnings.warn(\n",
+      "/home/abdoulaye_sakho/miniconda3/envs/dev_env/lib/python3.11/site-packages/sklearn/utils/deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -163,6 +173,16 @@
      "output_type": "stream",
      "text": [
       "PR AUC induced by applying no rebalancing strategy :  0.401426481385112\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abdoulaye_sakho/miniconda3/envs/dev_env/lib/python3.11/site-packages/sklearn/utils/deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "  warnings.warn(\n",
+      "/home/abdoulaye_sakho/miniconda3/envs/dev_env/lib/python3.11/site-packages/sklearn/utils/deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -201,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
