--- a/example/example_continous_only.ipynb
+++ b/example/example_continous_only.ipynb
@@ -144,7 +144,7 @@
    ],
    "source": [
     "## Apply MGS-GRF procedure to oversample the data\n",
-    "mgs_grf = MGSGRFOverSampler(K=len(numeric_features), random_state=0)\n",
+    "mgs_grf = MGSGRFOverSampler(random_state=0)\n",
     "X_train_balanced, y_train_balanced = mgs_grf.fit_resample(X_train_imbalanced, y_train_imbalanced)\n",
     "print(\"Augmented data : \", Counter(y_train_balanced))"
    ]
